--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==0.12
 django-werkzeug-debugger-runserver==0.2
 djangorestframework==2.3.10
 oauthlib==0.6.0
+psycopg2==2.5.2
 rauth==0.6.2
 requests==2.1.0
 requests-oauthlib==0.4.0
