--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.6.1
+Django==1.6.9
 South==0.8.4
 Werkzeug==0.9.4
 dj-database-url==0.2.2
@@ -22,4 +22,5 @@ rq==0.3.13
 shapeways==0.1.6
 six==1.4.1
 times==0.6.2
+unicodecsv==0.9.4
 wsgiref==0.1.2
