--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.9
 South==0.8.4
 Werkzeug==0.9.4
 dj-database-url==0.2.2
+dj-static==0.0.6
 django-cors-headers==0.12
 django-rq==0.6.1
 django-uuidfield==0.4.0
@@ -21,6 +22,7 @@ requests-oauthlib==0.4.0
 rq==0.3.13
 shapeways==0.1.6
 six==1.4.1
+static3==0.5.1
 times==0.6.2
 unicodecsv==0.9.4
 wsgiref==0.1.2
